# soccergame_gazebo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
launch/: fifaGz5_factory.sh  fifaGz5_factoryDebug.sh  fifaGz5_factory_keyboard.sh
models/collisionBox/: model.config  model.sdf
models/playerMov/bvh/: 02_03runjogLentoFrameTime100ms.bvh  10_03patearlento20ms.bvh  12_01walklento100ms.bvh
resources/: image reference.txt
resources/blender/fhuman2/: 09_01runLento.bvh  10_03_patearReducedEntre100   ko.bvh
resources/blender/fhuman2/dae/: player.dae
resources/blender/fhuman2/parado/SoloEsqueleto/: untitled.dae
resources/blender/fhuman2/postBlenderBVH/: movplayer.bvh
resources/blender/fhuman2/postBlenderRemoviendoPiel/: untitled.dae
resources/blender/fhuman2/preBlender/: untitled.blend
resources/blender/fhuman2/stop/: stopPoseKO.blend
resources/blender/gzActor3/: messi.mhx2
src/: FBall.cpp  FBall.h  FEntity.cpp  FEntity.h  FGame.h  FPlayer.cpp  FPlayer.h  FPlayerCommon.h  FScene.cpp  FScene.h  FStadium.cpp  FStadium.h  FTeam.cpp  FTeam.h  MsgCommand.hpp  apiJoystickGz.cc  factoryWorldPlugin.cc  keyboard.cc  magic_enum.hpp  models.hh
worlds/: factoryWorldPlugin.world
